--- a/MoveCar.html
+++ b/MoveCar.html
@@ -86,7 +86,7 @@
             <input id="Button1" type="button" value="发送" onclick="showMsg();" />
         </p>
     </div>
-
+    <a href="url">http://180.101.227.98:7866/MessageService/SendAlarm/9999/aaaa</a>
     <div id="footer">
         自己做的，禁止抄袭~
     </div>
