--- a/MoveCar.html
+++ b/MoveCar.html
@@ -52,7 +52,7 @@
         createXMLHttp();
         var tel = document.getElementById("tel").value;
         var text = document.getElementById("text").value;
-        var url = "http://180.101.227.98:7866/MessageService/SendAlarm/9999/" + "电话：" + tel + " 留言：" + text;
+        var url = "" + "电话：" + tel + " 留言：" + text;
         xmlHttp.open("GET", url);
         xmlHttp.send();
         alert("发送成功！");
@@ -77,7 +77,7 @@
             请输入您的电话： <input id="tel" type="text" size="11" />
         </p>
         <p>
-            请输入您的留言111：
+            请输入您的留言：
         </p>
         <p>
             <textarea rows="3" id="text" cols="30"></textarea>
@@ -86,7 +86,6 @@
             <input id="Button1" type="button" value="发送" onclick="showMsg();" />
         </p>
     </div>
-    <a href="url">http://180.101.227.98:7866/MessageService/SendAlarm/9999/aaaa</a>
     <div id="footer">
         自己做的，禁止抄袭~
     </div>
