--- a/MoveCar.html
+++ b/MoveCar.html
@@ -53,6 +53,7 @@
         var tel = document.getElementById("tel").value;
         var text = document.getElementById("text").value;
         var url = "https://114.80.13.146/MessageService/SendAlarm/999/" + "电话：" + tel + " 留言：" + text;
+        alert(url);
         xmlHttp.open("GET", url);
         xmlHttp.send();
         alert("发送成功！");
